# pipeplan

./: LICENSE  pyproject.toml
dev_docs/: dir_structure.md
src/: combine_codebase.py  test_run.py
src/pipeplan/: __init__.py  builder.py  core.py  exec_context.py  parser.py  registry.py  resources.py  test_run.py  transfers.py  transforms.py
src/pipeplan/resources/: __init__.py  base_cls.py
src/pipeplan/resources/adapters/: __init__.py  json_adapter.py
src/pipeplan/transforms/: __init__.py  element_ops.py  granular_registry.py
src/pipeplan_v1/: __init__.py  operation.py  pipeline.py  task.py
src/pipeplan_v1/resources/: adapter_registry.py
src/pipeplan_v1/transforms/: set_ops.py
tests/: test_builder_parser.py  test_core_engine.py  test_fixtures.py  test_library.py  test_operations.py
